// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MBAppStoreLink renders a google play store button if the userAgent matches android 1`] = `
<div
  class="elMBAppStoreLink_Container"
>
  <a
    href="https://play.google.com/store/apps/details?id=minibar.android"
    id="play-store-link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Get it on Google Play"
      src="/assets/components/elements/mb-app-store-link/play-store.png"
      srcset="/assets/components/elements/mb-app-store-link/play-store@2x.png 2x, /assets/components/elements/mb-app-store-link/play-store@3x.png 3x"
    />
  </a>
</div>
`;

exports[`MBAppStoreLink renders an app store button if the userAgent matches ios 1`] = `
<div
  class="elMBAppStoreLink_Container"
>
  <a
    href="https://itunes.apple.com/us/app/minibar-delivery-wine-liquor/id720850888?mt=8&uo=4&at=11l5XB&ct=minibar"
    id="app-store-link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Download on the App Store"
      src="/assets/components/elements/mb-app-store-link/ios-app-store.png"
      srcset="/assets/components/elements/mb-app-store-link/ios-app-store@2x.png 2x, /assets/components/elements/mb-app-store-link/ios-app-store@3x.png 3x"
    />
  </a>
</div>
`;

exports[`MBAppStoreLink renders both if platform can not be determined by userAgent 1`] = `
<div
  class="elMBAppStoreLink_Container"
>
  <a
    href="https://itunes.apple.com/us/app/minibar-delivery-wine-liquor/id720850888?mt=8&uo=4&at=11l5XB&ct=minibar"
    id="app-store-link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Download on the App Store"
      src="/assets/components/elements/mb-app-store-link/ios-app-store.png"
      srcset="/assets/components/elements/mb-app-store-link/ios-app-store@2x.png 2x, /assets/components/elements/mb-app-store-link/ios-app-store@3x.png 3x"
    />
  </a>
  <a
    href="https://play.google.com/store/apps/details?id=minibar.android"
    id="play-store-link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Get it on Google Play"
      src="/assets/components/elements/mb-app-store-link/play-store.png"
      srcset="/assets/components/elements/mb-app-store-link/play-store@2x.png 2x, /assets/components/elements/mb-app-store-link/play-store@3x.png 3x"
    />
  </a>
</div>
`;
